# SuperSDL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.hpp.in
cmake/: SuperSDLConfig.cmake.in
example/: CMakeLists.txt
examples/: example.cpp
include/SuperSDL/: color.hpp  engine.hpp  game.hpp  loggable.hpp  renderer.hpp  supersdl.hpp  util.hpp
src/: engine.cpp  game.cpp  loggable.cpp  supersdl.hpp  util.cpp
src/graphics/: color.cpp  renderer.cpp
